@@ -1,3 +1,8 @@
+ags (3.6.4)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed missing return value of ags_window_button_press_event()
+
 ags (3.6.3)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
